--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,8 +1,12 @@
 <div class="col-md-12>
 
+
 <div class="group">
+  <% if current_user && current_user == @group.user%>
   <%= link_to("Edit", edit_group_path, class: "btn btn-primary pull-right") %>
+<% end %>
 </div>
+
 <h3><%= @group.title %></h3>
 <p><%= @group.description %></p>
 </div>
