--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -4,6 +4,7 @@
 <div class="group">
   <% if current_user && current_user == @group.user%>
   <%= link_to("Edit", edit_group_path, class: "btn btn-primary pull-right") %>
+<%= link_to("Write a post", edit_post_path, class: "btn btn-primary pull-right")%>
 <% end %>
 </div>
 
